2025-12-02T00:45:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19842629950 # 1340
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
* notice: last 14d: unq all: 14 37
* notice: prev accum: outdated-unq outdated-all / unq all: 1285 6083 / 1297 6104
* notice: next accum: outdated-unq outdated-all / unq all: 1285 6083 / 1299 6120
* notice: prev exec diff / last date diff / accum: unq all: +2 +16 -0 -0 / +2 +16 -0 -0 / 2 16
* notice: removed / changed dates: [] / [2025-12-01]

2025-12-01T00:55:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19807696811 # 1338
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-01
* notice: last 14d: unq all: 12 21
* notice: prev accum: outdated-unq outdated-all / unq all: 1283 6077 / 1295 6102
* notice: next accum: outdated-unq outdated-all / unq all: 1285 6083 / 1297 6104
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-11-16 2025-11-17] / [2025-11-30]

2025-11-29T00:42:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19776541155 # 1334
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-29
* notice: last 14d: unq all: 12 25
* notice: prev accum: outdated-unq outdated-all / unq all: 1282 6071 / 1294 6101
* notice: next accum: outdated-unq outdated-all / unq all: 1283 6077 / 1295 6102
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-14] / [2025-11-28]

2025-11-28T00:42:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19750866591 # 1332