@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-02T00:45:35Z",
-  "count_outdated" : 6083,
-  "uniques_outdated" : 1285,
-  "count" : 6120,
-  "uniques" : 1299,
+  "timestamp" : "2025-12-03T00:44:41Z",
+  "count_outdated" : 6084,
+  "uniques_outdated" : 1286,
+  "count" : 6121,
+  "uniques" : 1300,
   "views" : [
-    {
-      "timestamp": "2025-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 4,
@@ -85,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
