@@ -3,11 +3,6 @@
   "uniques": 14,
   "views": [
     {
-      "timestamp": "2025-11-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 4,
       "uniques": 2
@@ -46,6 +41,11 @@
       "timestamp": "2025-12-01T00:00:00Z",
       "count": 16,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-12-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
