@@ -1,3 +1,12 @@
+2025-12-03T00:44:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19878388725 # 1342
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
+* notice: last 14d: unq all: 14 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 1285 6083 / 1299 6120
+* notice: next accum: outdated-unq outdated-all / unq all: 1286 6084 / 1300 6121
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-11-18] / [2025-12-02]
+
 2025-12-02T00:45:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19842629950 # 1340
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
